# UAP_Pembelajaran_Mesin

./: .pdm-python  README.md  pyproject.toml
src/: klasifikasi_citra.py
src/Model/Image/Model_InceptionV3/: model_layers.json  model_summary.txt
src/Model/Image/Model_InceptionV3/Evaluation/Test/: classification_report.txt
src/Model/Image/Model_InceptionV3/Evaluation/Validation/: classification_report.txt
src/Model/Image/Model_MobileNetV2/: model_layers.json  model_summary.txt
src/Model/Image/Model_MobileNetV2/Evaluation/Test/: classification_report.txt
src/Model/Image/Model_MobileNetV2/Evaluation/Validation/: classification_report.txt
